--- a/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
@@ -5,6 +5,9 @@
         <th:block th:insert="fragments/default/default" />
         <link rel="stylesheet" type="text/css" href="/css/dashboard.css">
 
+        <link rel="stylesheet" href="/css/plugin/dashboard/jquery.bxslider.4.2.12.css">
+        <script src="/js/plugin/dashboard/jquery.bxslider.min.4.2.12.js"></script>
+
         <th:block th:insert="view/commons/map"/>
     </head>
     <body>
