김제 드론대시보드 문구수정

--- a/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_drone.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_drone.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="top_gimje top_gimje_pole">
-            <h6>스마트분전함 이벤트 등급별 발생 현황</h6>
+            <h6>스마트분전반 이벤트 등급별 발생 현황</h6>
             <div class="top_gimje_box">
                 <div id="cabinetStatus1">
                     <p class="title"><img src="/images/dashboard/point_danger.svg">위험</p>
