대시보드 드론 맵 추가 및 관제 오른쪽 패널 (리스트) 조건 UI 수정중2

--- a/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_drone.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_drone.html
@@ -48,7 +48,7 @@
     <section class="dashboard_section">
         <div class="box">
             <h5>분전반 위치 지도</h5>
-            <div id="viewMap" class="map_wrap">
+            <div id="dashDroneStationMap" class="map_wrap">
                 <canvas class="map_mouse_ban"></canvas>
             </div>
         </div>
