--- a/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility.html
@@ -39,14 +39,14 @@
         <div class="box box_location box_320">
             <h5>개소 위치</h5>
             <!-- 위치맵 영역 -->
-            <div id="viewMap" class="map_wrap">
+            <div id="dashFacilityStationMap" class="map_wrap">
                 <canvas class="map_mouse_ban"></canvas>
             </div>
         </div>
         <div class="box box_320">
             <h5>유동인구 분포도</h5>
             <!-- 분포도 영역 -->
-            <div id="heatMap" class="map_wrap">
+            <div id="dashFacilityHeatMap" class="map_wrap">
                 <canvas class="map_mouse_ban"></canvas>
             </div>
         </div>
