--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -67,7 +67,7 @@
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -121,7 +121,7 @@
                                 <dd><input type="text" id="smartPoleEventPastEndDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                                 <span>까지</span>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
+                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" data-selectbox-sub-type="smart_pole_event">
                                 <dt class="checkbox_title select_title">이벤트 종류</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -135,12 +135,12 @@
                                 <dt>이벤트 등급</dt>
                                 <dd>
 							<span>
-								<input type="checkbox" id="urgent" name="eventGrade" data-value="10" checked>
-								<label for="urgent"><span></span>긴급</label>
+								<input type="checkbox" id="smartPoleEventPastUrgent" name="eventGrade" data-value="10" checked>
+								<label for="smartPoleEventPastUrgent"><span></span>긴급</label>
 							</span>
                                     <span>
-								<input type="checkbox" id="caution" name="eventGrade" data-value="20" checked>
-								<label for="caution"><span></span>주의</label>
+								<input type="checkbox" id="smartPoleEventPastCaution" name="eventGrade" data-value="20" checked>
+								<label for="smartPoleEventPastCaution"><span></span>주의</label>
 							</span>
                                 </dd>
                             </dl>
@@ -148,16 +148,16 @@
                                 <dt>처리 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="checkbox" id="staus00" name="eventState" data-value="0" multiple="multiple">
-                                        <label for="staus00"><span></span>미처리</label>
+                                        <input type="checkbox" id="smartPoleEventPastStaus00" name="eventState" data-value="0" multiple="multiple">
+                                        <label for="smartPoleEventPastStaus00"><span></span>미처리</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus01" name="eventState" data-value="1" multiple="multiple" checked>
-                                        <label for="staus01"><span></span>조치완료</label>
+                                        <input type="checkbox" id="smartPoleEventPastStaus01" name="eventState" data-value="1" multiple="multiple" checked>
+                                        <label for="smartPoleEventPastStaus01"><span></span>조치완료</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus02" name="eventState" data-value="2" multiple="multiple" checked>
-                                        <label for="staus02"><span></span>종료</label>
+                                        <input type="checkbox" id="smartPoleEventPastStaus02" name="eventState" data-value="2" multiple="multiple" checked>
+                                        <label for="smartPoleEventPastStaus02"><span></span>종료</label>
                                     </span>
                                 </dd>
                             </dl>
@@ -253,7 +253,7 @@
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -307,7 +307,7 @@
                                 <dd><input type="text" id="smartBusStopEventPastEndDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                                 <span>까지</span>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind">
+                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" data-selectbox-sub-type=smart_busstop_event>
                                 <dt class="checkbox_title select_title">이벤트 종류</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -321,12 +321,12 @@
                                 <dt>이벤트 등급</dt>
                                 <dd>
 							<span>
-								<input type="checkbox" id="urgent" name="eventGrade" data-value="10" checked>
-								<label for="urgent"><span></span>긴급</label>
+								<input type="checkbox" id="smartBusStopEventPastUrgent" name="eventGrade" data-value="10" checked>
+								<label for="smartBusStopEventPastUrgent"><span></span>긴급</label>
 							</span>
                                     <span>
-								<input type="checkbox" id="caution" name="eventGrade" data-value="20" checked>
-								<label for="caution"><span></span>주의</label>
+								<input type="checkbox" id="smartBusStopEventPastCaution" name="eventGrade" data-value="20" checked>
+								<label for="smartBusStopEventPastCaution"><span></span>주의</label>
 							</span>
                                 </dd>
                             </dl>
@@ -334,16 +334,16 @@
                                 <dt>처리 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="checkbox" id="staus00" name="eventState" data-value="0" multiple="multiple">
-                                        <label for="staus00"><span></span>미처리</label>
+                                        <input type="checkbox" id="smartBusStopEventPastStaus00" name="eventState" data-value="0" multiple="multiple">
+                                        <label for="smartBusStopEventPastStaus00"><span></span>미처리</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus01" name="eventState" data-value="1" multiple="multiple" checked>
-                                        <label for="staus01"><span></span>조치완료</label>
+                                        <input type="checkbox" id="smartBusStopEventPastStaus01" name="eventState" data-value="1" multiple="multiple" checked>
+                                        <label for="smartBusStopEventPastStaus01"><span></span>조치완료</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus02" name="eventState" data-value="2" multiple="multiple" checked>
-                                        <label for="staus02"><span></span>종료</label>
+                                        <input type="checkbox" id="smartBusStopEventPastStaus02" name="eventState" data-value="2" multiple="multiple" checked>
+                                        <label for="smartBusStopEventPastStaus02"><span></span>종료</label>
                                     </span>
                                 </dd>
                             </dl>
@@ -457,7 +457,7 @@
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -510,7 +510,7 @@
                                 <dd><input type="text" id="smartPowerEventPastEndDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                                 <span>까지</span>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
+                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" data-selectbox-sub-type="EMS_EVENT">
                                 <dt class="checkbox_title select_title">이벤트 종류</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -524,12 +524,12 @@
                                 <dt>이벤트 등급</dt>
                                 <dd>
 							<span>
-								<input type="checkbox" id="urgent" name="eventGrade" data-value="10" checked>
-								<label for="urgent"><span></span>긴급</label>
+								<input type="checkbox" id="smartPowerEventPastUrgent" name="eventGrade" data-value="10" checked>
+								<label for="smartPowerEventPastUrgent"><span></span>긴급</label>
 							</span>
                                     <span>
-								<input type="checkbox" id="caution" name="eventGrade" data-value="20" checked>
-								<label for="caution"><span></span>주의</label>
+								<input type="checkbox" id="smartPowerEventPastCaution" name="eventGrade" data-value="20" checked>
+								<label for="smartPowerEventPastCaution"><span></span>주의</label>
 							</span>
                                 </dd>
                             </dl>
@@ -537,16 +537,16 @@
                                 <dt>처리 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="checkbox" id="staus00" name="eventState" data-value="0" multiple="multiple">
-                                        <label for="staus00"><span></span>미처리</label>
+                                        <input type="checkbox" id="smartPowerEventPastStaus00" name="eventState" data-value="0" multiple="multiple">
+                                        <label for="smartPowerEventPastStaus00"><span></span>미처리</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus01" name="eventState" data-value="1" multiple="multiple" checked>
-                                        <label for="staus01"><span></span>조치완료</label>
+                                        <input type="checkbox" id="smartPowerEventPastStaus01" name="eventState" data-value="1" multiple="multiple" checked>
+                                        <label for="smartPowerEventPastStaus01"><span></span>조치완료</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="staus02" name="eventState" data-value="2" multiple="multiple" checked>
-                                        <label for="staus02"><span></span>종료</label>
+                                        <input type="checkbox" id="smartPowerEventPastStaus02" name="eventState" data-value="2" multiple="multiple" checked>
+                                        <label for="smartPowerEventPastStaus02"><span></span>종료</label>
                                     </span>
                                 </dd>
                             </dl>
@@ -665,7 +665,7 @@
                                 <dd><input type="text" id="droneEventPastEndDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                                 <span>까지</span>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind">
+                            <dl class="dropdown_checkbox" data-selectbox-type="eventKind" data-selectbox-sub-type="DRONE_EVENT">
                                 <dt class="checkbox_title select_title">이벤트 종류</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -679,12 +679,12 @@
                                 <dt>이벤트 등급</dt>
                                 <dd>
 							<span>
-								<input type="checkbox" id="urgent" name="eventGrade" data-value="10" checked>
-								<label for="urgent"><span></span>긴급</label>
+								<input type="checkbox" id="droneEventPastUrgent" name="eventGrade" data-value="10" checked>
+								<label for="droneEventPastUrgent"><span></span>긴급</label>
 							</span>
                                     <span>
-								<input type="checkbox" id="caution" name="eventGrade" data-value="20" checked>
-								<label for="caution"><span></span>주의</label>
+								<input type="checkbox" id="droneEventPastCaution" name="eventGrade" data-value="20" checked>
+								<label for="droneEventPastCaution"><span></span>주의</label>
 							</span>
                                 </dd>
                             </dl>
@@ -692,16 +692,16 @@
                                 <dt>처리 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="checkbox" id="droneStaus00" name="eventState" data-value="0" multiple="multiple">
-                                        <label for="staus00"><span></span>미처리</label>
+                                        <input type="checkbox" id="droneEventPastStaus00" name="eventState" data-value="0" multiple="multiple">
+                                        <label for="droneEventPastStaus00"><span></span>미처리</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="droneStaus01" name="eventState" data-value="1" multiple="multiple" checked>
-                                        <label for="staus01"><span></span>조치완료</label>
+                                        <input type="checkbox" id="droneEventPastStaus01" name="eventState" data-value="1" multiple="multiple" checked>
+                                        <label for="droneEventPastStaus01"><span></span>조치완료</label>
                                     </span>
                                     <span>
-                                        <input type="checkbox" id="droneStaus02" name="eventState" data-value="2" multiple="multiple" checked>
-                                        <label for="staus02"><span></span>종료</label>
+                                        <input type="checkbox" id="droneEventPastStaus02" name="eventState" data-value="2" multiple="multiple" checked>
+                                        <label for="droneEventPastStaus02"><span></span>종료</label>
                                     </span>
                                 </dd>
                             </dl>
