제어시설물 On/Off표시

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -310,11 +310,11 @@
                     </dl>
                     <dl data-value="stationInfo_power">
                         <dt><i><img src="/images/default/busStationState02.svg"></i>전력</dt>
-                            <dd><span class="value">-</span>kWh</dd>
+                            <dd><span class="value">-</span>Wh</dd>
                     </dl>
                     <dl data-value="stationInfo_wattage">
                         <dt><i><img src="/images/default/busStationState02.svg"></i>전력량</dt>
-                        <dd><span class="value">-</span>kWh</dd>
+                        <dd><span class="value">-</span>Wh</dd>
                     </dl>
                     <dl data-value="stationInfo_temperature">
                         <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
