관제 오른쪽 패널 show/hide 추가

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -415,6 +415,7 @@
 <!--                </div>-->
             </div>
         </div>
+        </div>
     </section>
 
     <!-- 시설물(드론) [김제 45210] -->
