영주 스마트 정류장 power, status 분리

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -320,13 +320,29 @@
                         <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
                         <dd><span class="value">-</span>&#186;&#1057;</dd>
                     </dl>
-                    <dl data-value="yj_room_temp">
+                    <dl data-value="room_temp">
                         <dt><i><img src="/images/default/busStationState04.svg"></i>실내기온</dt>
                         <dd><span class="value">-</span>&#186;&#1057;</dd>
                     </dl>
-                    <dl data-value="yj_temp">
+                    <dl data-value="temp">
                         <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
                         <dd><span class="value">-</span>&#186;&#1057;</dd>
+                    </dl>
+                    <dl data-value="PM10">
+                        <dt><i><img src="/images/default/busStationState05.svg"></i>미세먼지</dt>
+                        <dd><span class="value">-</span>㎍/㎥</dd>
+                    </dl>
+                    <dl data-value="PM2.5">
+                        <dt><i><img src="/images/default/busStationState05.svg"></i>초미세먼지</dt>
+                        <dd><span class="value">-</span>㎍/㎥</dd>
+                    </dl>
+                    <dl data-value="humidity">
+                        <dt><i><img src="/images/default/busStationState04.svg"></i>습도</dt>
+                        <dd><span class="value">-</span>%RH</dd>
+                    </dl>
+                    <dl data-value="CO2">
+                        <dt><i><img src="/images/default/busStationState04.svg"></i>CO2</dt>
+                        <dd><span class="value">-</span>ppm</dd>
                     </dl>
                 </div>
             </div>
