영상 관련 플러그인 추가

--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -9,6 +9,12 @@
     <script type="text/javascript" src="/js/pages/mntr.js"></script>
     <script type="text/javascript" src="/js/api/kakaoApi.js"></script>
 
+    <script type="text/javascript" src="/js/kurento/kurento-client.js"></script>
+    <script type="text/javascript" src="/js/kurento/kurento-utils.js"></script>
+    <script type="text/javascript" src="/js/kurento/video.js"></script>
+    <script type="text/javascript" src="/js/kurento/midsvr.js"></script>
+    <script type="text/javascript" src="/js/video/video.util.js"></script>
+
     <!-- datetimepicker -->
     <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
     <script type=text/javascript src="/js/plugin/air-datepicker/datepicker.js"></script>
