--- a/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_dashboard.html
@@ -15,17 +15,18 @@
             <th:block th:replace="fragments/default/header :: headerFragment">
             </th:block>
 
+            <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
             <div class="dashboard">
                 <dl class="dashboard_snb">
                     <dt>통합 모니터링 대시보드</dt>
                     <!--<dd class="dashboardType" data-value="peopleCount"><i><img src="/images/default/dashboardSnb01Default.svg"></i>유동인구 분석</dd>
                     <dd class="dashboardType" data-value="smartPoleEvent"><i><img src="/images/default/dashboardSnb02Default.svg"></i>스마트폴 이벤트</dd>-->
-                    <dd class="dashboardType" data-value="facility">
+                    <dd th:if="${municipality == '41210000' or municipality == '47210000' or municipality == '26290000'}" class="dashboardType" data-value="facility">
                         <a href="/pages/dashboard/dashboard_facility">
                         <i><img src="/images/default/dashboardSnb02Default.svg"></i>시설물 이벤트
                         </a>
                     </dd>
-                    <dd class="dashboardType" data-value="drone">
+                    <dd th:if="${municipality == '45210000'}" class="dashboardType" data-value="drone">
                         <a href="/pages/dashboard/dashboard_drone">
                             <i><img src="/images/default/dashboardSnb02Default.svg"></i>드론 이벤트
                         </a>
