광명시 환경에 맞게 설정 변경

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -303,20 +303,20 @@
                         <dt><i><img src="/images/default/busStationState01.svg"></i>현재인원</dt>
                         <dd><span class="value">-</span>명</dd>
                     </dl>
-                    <dl data-value="stationInfo_air_index">
-                        <dt><i><img src="/images/default/busStationState05.svg"></i>미세먼지</dt>
+<!--                    <dl data-value="PM10">-->
+<!--                        <dt><i><img src="/images/default/busStationState05.svg"></i>미세먼지</dt>-->
 <!--                        &lt;!&ndash; blue : 좋음 / green : 보통 / yellow : 나쁨 / red : 매우나쁨 &ndash;&gt;-->
-                        <dd class="green"><span class="value">-</span>보통</dd>
-                    </dl>
-                    <dl data-value="stationInfo_power">
+<!--                        <dd class="green"><span class="value">-</span>보통</dd>-->
+<!--                    </dl>-->
+                    <dl data-value="power">
                         <dt><i><img src="/images/default/busStationState02.svg"></i>전력</dt>
                             <dd><span class="value">-</span>Wh</dd>
                     </dl>
-                    <dl data-value="stationInfo_wattage">
+                    <dl data-value="wattage">
                         <dt><i><img src="/images/default/busStationState02.svg"></i>전력량</dt>
                         <dd><span class="value">-</span>Wh</dd>
                     </dl>
-                    <dl data-value="stationInfo_temperature">
+                    <dl data-value="temperature">
                         <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
                         <dd><span class="value">-</span>&#186;&#1057;</dd>
                     </dl>
