용의자 얼굴 CRUD 로직 서비스 단으로 이동, 사진 인코딩 추가, 인텔리빅스 api 데이터 맞춤

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
@@ -88,7 +88,10 @@
                     <form id="faceDetectionForm">
                         <dl>
                             <dt>이름</dt>
-                            <dd><input type="text" id="faceName" name="faceName" placeholder="*필수 입력" data-required="true"></dd>
+                            <dd>
+                                <input type="text" id="faceName" name="faceName" placeholder="*필수 입력" data-required="true">
+                                <input type="text" id="faceUid" name="faceUid" style="display: none">
+                            </dd>
                         </dl>
                         <dl>
                             <dt>나이</dt>
