오탈자 수정

--- a/danusys-platform/src/main/resources/templates/fragments/stats/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/stats/nav.html
@@ -6,7 +6,7 @@
                 <a href="#one">이벤트 발생 통계</a>
                 <ul class="accordion_sub_menu">
                     <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
-                    <li th:if="${municipality == '41210000'}"><a href="/pages/stats/statistics?type=smart_pole_event">스마트폴 이벤트</a></li>
+                    <li th:if="${municipality == '41210000' or municipality == '26290000'}"><a href="/pages/stats/statistics?type=smart_pole_event">스마트폴 이벤트</a></li>
                     <li th:if="${municipality == '41210000' or municipality == '47210000'}"><a href="/pages/stats/statistics?type=smart_busstop_event">스마트 정류장 이벤트</a></li>
                     <li th:if="${municipality == '45210000'}"><a href="/pages/stats/statistics?type=EMS_EVENT">스마트분전함 이벤트</a></li>
                     <li th:if="${municipality == '45210000'}"><a href="/pages/stats/statistics?type=DRONE_EVENT">드론 관제 이벤트</a></li>
