얼굴 등록 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
@@ -16,12 +16,11 @@
             <h6>용의자 · 실종자 검출 검색</h6>
             <form>
                 <div>
-                    <p>인상 착의</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="pattr" th:if="${municipality == '26290000'}">
-                        <dt class="checkbox_title select_title">인상착의</dt>
-                        <dd class="checkbox_list list" style="display: none;">
-                        </dd>
-                    </dl>
+<!--                    <p>인상 착의</p>-->
+<!--                    <dl class="dropdown_checkbox" data-selectbox-type="pattr" th:if="${municipality == '26290000'}">-->
+<!--                        <dt class="checkbox_title select_title">인상착의</dt>-->
+<!--                        <dd class="checkbox_list list" style="display: none;"></dd>-->
+<!--                    </dl>-->
                     <dl class="checkbox_set">
                         <dt>구분</dt>
                         <dd>
