대시보드 3차 배포(css 및 데이터조건변경)

--- a/danusys-platform/src/main/resources/static/css/plugin/apexCharts/apexcharts.css
+++ b/danusys-platform/src/main/resources/static/css/plugin/apexCharts/apexcharts.css
@@ -68,7 +68,7 @@
   color: #fff;
   background: rgba(30, 30, 30, 0.8);
 }
-#floatingPopulationChart .apexcharts-tooltip.apexcharts-theme-dark{/*height: 100%;*/}
+#floatingPopulationChart .apexcharts-tooltip.apexcharts-theme-dark{max-height: 100%;}
 
 .apexcharts-tooltip * {
   font-family: inherit;
