영상 처리 프론트 (실시간/저장구분 및 UI show/hide수정, 이벤트구분중)

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -225,8 +225,8 @@
             <dl class="area_title">
                 <dt><i><img src="/images/default/titleIcon03.svg"></i>CCTV
                     <select>
-                        <option selected>회전형</option>
-                        <option>고정형</option>
+                        <!--<option selected>회전형</option>
+                        <option>고정형</option>-->
                     </select>
                 </dt>
                 <dd class="ptz_toggle">
