--- a/danusys-platform/src/main/resources/static/css/reset.css
+++ b/danusys-platform/src/main/resources/static/css/reset.css
@@ -62,6 +62,7 @@ input, select, textarea:focus{outline: none;}
 /* select */
 select{width: 100%; height: 34px; margin: 0px; padding: 0px 40px 0px 8px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; background: transparent; border-radius: 4px; font-family: 'Noto Sans', sans-serif; background: url('/images/default/arrowBottom.svg') no-repeat 90% 56%; background-size: 14px; -webkit-appearance: none; -moz-appearance: none; appearance: none;}
 select::-ms-expand{display: none;}
+select option{background: #1a1b1f;}
 
 /* layout */
 html, body{width: 100%; height: 100%; color: #dee0e4; font-size: 14px; letter-spacing: -0.6px; font-family: 'Noto Sans', sans-serif; background: #1e1f23;}
