--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -240,8 +240,8 @@
 
 .area_video{margin: auto; padding: 10px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
 .area_video div{width: 412px; height: 232px; background: pink;}
-.area_video .video_wrap{width: 100%; height: 100%;}
-.area_video .video_wrap video{width: 100%; height: 100%; object-fit: fill;}
+.area_video .video_wrap{width: 100%; height: 100%; object-fit: contain; display: flex;}
+.area_video .video_wrap video{width: 100%; height: 100%; object-fit: contain; background: #0c0c0d;}
 
 .area_video_detection{width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 10px;}
 .area_video_detection div{width: auto;}
