--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="/js/kurento/video.js"></script>
     <script type="text/javascript" src="/js/kurento/midsvr.js"></script>
     <script type="text/javascript" src="/js/video/video.util.js"></script>
+    <script type="text/javascript" src="/js/video/connectDialog.js"></script>
 
     <!-- datetimepicker -->
     <link rel="stylesheet" type="text/css" href="/css/plugin/air-datepicker/datepicker.css">
